@@ -1,0 +1,23 @@
+using System;
+
+namespace System.Collections {
+
+	public struct DictionaryEntry {
+		private object key;
+		private object val;
+
+		public DictionaryEntry( object k, object value) {
+			key = k;
+			val = value;
+		}
+		
+		public object Key {
+			get {return key;}
+			set {key = value;}
+		}
+		public object Value {
+			get {return val;}
+			set {val = value;}
+		}
+	}
+}
